--- a/src/components/styles/ItemCount.css
+++ b/src/components/styles/ItemCount.css
@@ -1,7 +1,13 @@
 .contador{
-    width: fit-content;
-    background-color: bisque;
+/*     width: fit-content; */
+/*     background-color: bisque; */
+    font-size: 20px;
     margin: auto;
-    padding: 1rem;
+    padding: 1.5rem;
     text-align: center;
+}
+
+.contador button{
+    padding: 0.5rem;
+    margin: 0.2rem;
 }
